feat(triagem): adequa fluxos e calcula idade pelo cadastro
